--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^1.17.1",
     "npm-run-all": "^4.1.2",
     "prettier-eslint-cli": "^4.7.1",
+    "ramda": "^0.25.0",
     "ts-node": "3.3.0",
     "tslint": "^5.9.1",
     "typescript": "2.5.2"
