--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "apollo-engine": "^1.0.2",
     "compression": "^1.7.2",
+    "dataloader": "^1.4.0",
     "graphql-import": "^0.4.5",
     "graphql-yoga": "^1.5.2",
     "pg": "^7.3.0",
