--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
         "es5",
         "es6"
      ],
-     "target": "es5",
+     "target": "esnext",
      "module": "commonjs",
      "moduleResolution": "node",
      "outDir": "./build",
      "emitDecoratorMetadata": true,
      "experimentalDecorators": true,
-     "sourceMap": true
+     "sourceMap": true,
+    "allowUnreachableCode": true
   }
 }
