--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "apollo-engine": "^1.0.2",
     "compression": "^1.7.2",
     "dataloader": "^1.4.0",
+    "express-rate-limit": "^2.11.0",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-import": "^0.4.5",
     "graphql-yoga": "^1.5.2",
     "pg": "^7.3.0",
