--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,28 @@
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
 indent_style = space
 indent_size = 2
-charset = utf-8
-insert_final_newline = false
 end_of_line = lf
-# editorconfig-tools is unable to ignore longs strings or urls
-max_line_length = null
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+# Matches multiple files with brace expansion notation
+# Set default charset
+[*.{js,py}]
+charset = utf-8
+
+# 4 space indentation
+[*.py]
+indent_style = space
+indent_size = 4
+
+# Tab indentation (no size specified)
+[Makefile]
+indent_style = tab
+
+[*.md]
+trim_trailing_whitespace = false
