--- a/client-next/package.json
+++ b/client-next/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "analyze": "cross-env ANALYZE=1 next build"
   },
   "dependencies": {
     "apollo-boost": "^0.1.3",
@@ -21,7 +22,9 @@
     "@types/next": "^2.4.7",
     "@types/react": "^16.0.36",
     "@zeit/next-typescript": "^0.1.1",
-    "typescript": "^2.7.1"
+    "cross-env": "^5.1.4",
+    "typescript": "^2.7.1",
+    "webpack-bundle-analyzer": "^2.11.1"
   },
   "author": "",
   "license": "ISC"
