--- a/client-next/package.json
+++ b/client-next/package.json
@@ -13,6 +13,7 @@
     "graphql": "0.13.2",
     "isomorphic-unfetch": "2.0.0",
     "next": "^5.1.0",
+    "nprogress": "^0.2.0",
     "prop-types": "15.6.1",
     "react": "^16.3.2",
     "react-apollo": "2.1.0",
