--- a/client-next/package.json
+++ b/client-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-apollo",
+  "name": "swapiql-frontend",
   "version": "2.0.0",
   "scripts": {
     "dev": "next",
@@ -30,6 +30,6 @@
     "typescript": "^2.7.1",
     "webpack-bundle-analyzer": "^2.11.1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Federico Marcos",
+  "license": "GPL"
 }
