--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/node": "^8.0.29",
-    "axios": "^0.18.0",
     "dotenv-cli": "^1.4.0",
-    "graphql-cli": "^2.15.8",
+    "graphql-cli": "2.16.4",
     "nodemon": "^1.17.1",
     "npm-run-all": "^4.1.2",
     "prettier-eslint-cli": "^4.7.1",
@@ -16,22 +14,23 @@
     "typescript": "2.5.2"
   },
   "dependencies": {
-    "ramda": "^0.25.0",
     "apollo-engine": "^1.0.2",
     "compression": "^1.7.2",
     "dataloader": "^1.4.0",
     "express-rate-limit": "^2.11.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-import": "^0.4.5",
-    "graphql-yoga": "^1.5.2",
+    "graphql-yoga": "1.14.12",
     "pg": "^7.3.0",
+    "ramda": "^0.25.0",
     "reflect-metadata": "^0.1.10",
     "typeorm": "0.1.16"
   },
   "scripts": {
-    "start": "dotenv -- nodemon -e ts,graphql -x ts-node src/start.ts",
+    "start": "nodemon -e ts,graphql -x ts-node -r dotenv/config src/start.ts",
     "dev": "npm-run-all --parallel start playground",
-    "debug": "dotenv -- nodemon -e ts,graphql -x ts-node --inspect src/start.ts",
+    "debug": "nodemon -e ts,graphql -x ts-node -r dotenv/config --inspect=0.0.0.0:9229 src/start.ts",
+    "dev:debug": "npm-run-all --parallel debug playground",
     "playground": "graphql playground",
     "import": "ts-node fixtures/import.ts",
     "prettier": "prettier-eslint --write \"src/**/*.+(js|jsx|ts|tsx)\""
