--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,8 @@ services:
     build:
       context: './client-next'
       dockerfile: Dockerfile.prod
-    environment:
-      API_URL: http://localhost:4000
+      args:
+        - REACT_APP_API_URL=http://localhost:4000
     ports:
       - '3000:3000'
     command: 'yarn start'
