--- a/client-next/Dockerfile.prod
+++ b/client-next/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node
+FROM node:11
 
 ENV REACT_APP_API_URL $REACT_APP_API_URL
 
@@ -8,6 +8,8 @@ COPY package.json yarn.lock /app/
 
 WORKDIR /app
 
-RUN yarn && yarn build
+RUN yarn
 
 COPY . /app
+
+RUN yarn build
