--- a/client-next/Dockerfile
+++ b/client-next/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:11
 
-ARG REACT_APP_API_URL
+ARG API_URL
 
-ENV REACT_APP_API_URL $REACT_APP_API_URL
+ENV API_URL $API_URL
 
 RUN mkdir /app
 
