--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,10 +12,10 @@ services:
       context: './client-next'
       dockerfile: Dockerfile.prod
       args:
-        - API_URL=http://localhost:4000
+        - API_URL=http://swapiql.xyz/api/
     restart: always
     ports:
-      - '3000:3000'
+      - '4001:3000'
     command: 'yarn start'
 
   back:
