--- a/client-next/package.json
+++ b/client-next/package.json
@@ -2,16 +2,19 @@
   "name": "swapiql-frontend",
   "version": "2.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "start:build": "next build && next start",
+    "start": "node server.js",
+    "start:build": "next build && npm run start",
     "analyze": "cross-env ANALYZE=1 next build",
     "type-check": "tsc"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-boost": "^0.1.3",
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
     "graphql": "^14.0.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
@@ -21,7 +24,7 @@
     "react-apollo": "^2.3.1",
     "react-dom": "^16.3.2",
     "react-prism": "^4.3.2",
-    "tachyons": "^4.9.1"
+    "tachyons": "^4.11.1"
   },
   "devDependencies": {
     "@types/next": "^7.0.4",
